--- a/css/screen.css
+++ b/css/screen.css
@@ -92,6 +92,7 @@ h1 {
     line-height: 40px;
     margin: 0 0 24px;
     color: #17181A;
+    font-family: "Inter UI", "Helvetica Neue", Helvetica, arial, sans-serif;
 }
 
 h2 {
@@ -99,6 +100,7 @@ h2 {
     line-height: 32px;
     margin: 0 0 24px;
     color: #17181A;
+    font-family: "Inter UI", "Helvetica Neue", Helvetica, arial, sans-serif;
 }
 
 h3 {
@@ -106,6 +108,7 @@ h3 {
     line-height: 24px;
     margin: 0 0 24px;
     color: #17181A;
+    font-family: "Inter UI", "Helvetica Neue", Helvetica, arial, sans-serif;
 }
 
 h4,
@@ -114,6 +117,7 @@ h6 {
     font-size: 16px;
     line-height: 24px;
     margin: 0 0 24px;
+    font-family: "Inter UI", "Helvetica Neue", Helvetica, arial, sans-serif;
 }
 
 p,
