Changed h1 font-family

--- a/css/screen.css
+++ b/css/screen.css
@@ -92,7 +92,7 @@ h1 {
     line-height: 40px;
     margin: 0 0 24px;
     color: #17181A;
-    font-family: "Inter UI", "Helvetica Neue", Helvetica, arial, sans-serif;
+    font-family: "Playfair Display",serif;
 }
 
 h2 {
