--- a/css/screen.css
+++ b/css/screen.css
@@ -187,6 +187,36 @@ a:focus {
     color: #00A1E6;
 }
 
+.c-type-meta {
+    font-size: 14px;
+    fot-family: "Inter UI", "Helvetica Neue", Helvetica, arial, sans-serif;
+    line-height: 16px;
+    margin-top: 4px;
+}
+.c-author {
+    display: flex;
+    align-items: center;
+    margin-bottom:48px;
+}
+
+.c-author__image{
+    width: 56px;
+    height: 56px;
+    border-radius: 100%;
+    margin-right: 16px;
+}
+.c-author__caption{
+    padding-top: 0;
+}
+.c-author__name{
+    font-size: 16px;
+    line-height: 16px;
+}
+.c-author__meta {
+    margin-bottom: 0;
+}
+
+
 /* Small devices (landscape phones, 576px and up) */
 
 @media (min-width: 576px) {}
